--- a/app.css
+++ b/app.css
@@ -18,3 +18,18 @@ body{
     background-color:var(--dark-grey);
 }
 /*styling the container-title*/
+.title-container{
+    margin: 10px 0;
+    display:flex;
+    align-items:center;
+    gap:8px;
+}
+/*styling the title*/
+.title{
+    font-size:2.5rem;
+}
+/*styling the svg*/
+.date-svg{
+    width: 30px;
+    height:30px;
+}
