--- a/app.css
+++ b/app.css
@@ -22,6 +22,7 @@ body{
     margin: 10px 0;
     display:flex;
     align-items:center;
+    justify-content:center;
     gap:8px;
 }
 /*styling the title*/
@@ -32,4 +33,33 @@ body{
 .date-svg{
     width: 30px;
     height:30px;
+}
+/*styling the divider div*/
+.divider{
+    margin:auto;
+    width:150px;
+    height:10px;
+    background-color:var(--yellow);
+}
+/*styling the drop-down container*/
+.dropdown-container{
+    width:50%;
+    margin:40px auto;
+    position:relative;
+}
+/*styling the select*/
+select{
+    display:block;
+    margin: 20px auto 0;
+    width:100%;
+    height:50px;
+    font-size:100%;
+    font-weight:bold;
+    cursor:pointer;
+    background-color:var(--white);
+    border:none;
+    color:var(--dark-grey);
+    appearance: none;
+
+
 }
