--- a/app.css
+++ b/app.css
@@ -60,6 +60,24 @@ select{
     border:none;
     color:var(--dark-grey);
     appearance: none;
-
+    padding:10px;
+    padding-right:38px;
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    transition: color 0.3s ease, background-color 0.3s ease,  border-bottom-color 0.3s ease;
+}
+.select-icon{
+    position:absolute;
+    top:4px;
+    right:4px;
+    width:30px;
+    height:36px;
+    pointer-events:none;
+    padding-left:5px;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+.select-icon svg.icon{
+    transition:fill 0.3s ease;
+    fill:var(--dark-grey);
 
 }
